--- a/.github/workflows/alo-githubactions.yml
+++ b/.github/workflows/alo-githubactions.yml
@@ -1,14 +1,11 @@
-
 name: Exemplo de Fluxo de Trabalho
-
 on:
   workflow_dispatch:
-
 jobs:
   acao_inicial_job:
     runs-on: ubuntu-latest
     steps:
-      - nane: Imprime OLA
-      run: echo "OLA"
+      - name: Imprime OLA
+        run: echo "OLA"
       - name: Imprime TCHAU
-      run: echo "Tchau"
+        run: echo "Tchau"
